--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-validator": "^6.2.0",
     "handlebars-helpers": "^0.10.0",
     "handlebars-intl": "^1.1.2",
+    "handlebars-paginate": "^0.1.0",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "passport": "^0.4.0",
